<resources>
    <string name="app_name">HRFusion</string>
    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_regions_list">Regions</string>
    <string name="title_countries_list">Countries</string>
    <string name="title_locations_list">Locations</string>
    <string name="title_departments_list">Departments</string>
    <string name="title_employees_list">Employees</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="first_name">First name:</string>
    <string name="sample_text">sample text</string>
    <string name="last_name">Last name:</string>
    <string name="email_title">Email:</string>
    <string name="role_title">Role:</string>
    <string name="pnone_title">Pnone:</string>
    <string name="hire_date_title">Hire date:</string>
    <string name="salary_title">Salary:</string>
    <string name="comission_title" formatted="false">Comission (%):</string>
    <string name="city_title">City:</string>
    <string name="state_province">State (province):</string>
    <string name="postal">Postal code:</string>
    <string name="street_address_title">Street address:</string>
    <string name="id_title">id:</string>
    <string name="manager_note">(manager)</string>
    <string name="manager_role">manager</string>
    <string name="non_manager_role">non-manager</string>
    <string name="job_title">Job title:</string>
    <string name="department">Department:</string>
    <string name="period">Period:</string>
    <string name="min_salary">Min. salary:</string>
    <string name="max_salary">Max. salary:</string>
    <string name="salary_range">Salary range:</string>
    <string name="details_tab_title">Details</string>
    <string name="js_tab_tite">Job history</string>
    <string name="no_details_info">Details are provided only for \"Locations\" and \"Employees\" entities!</string>
    <string name="data_is_loading">Data is loading ...</string>
    <string name="cannot_start_activity">Cannot start activity (see logs for details)</string>
    <string name="cannot_create_vholder" formatted="false">Cannot create View Holder with class  %1$s (reason: %2$s)</string>
    <string name="title_activity_start">StartActivity</string>
</resources>
