<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context="victor.kryz.hrfusion.views.employees.DetailsFragment">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableSV"
        android:layout_marginBottom="0dp">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableLayout"
        android:layout_above="@+id/item_detail"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:layout_column="1"
                android:text="@string/city_title"
                style="@style/DetailTable.Title"
                android:id="@+id/textView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="start"
                android:id="@+id/city"
                android:layout_column="2"
                style="@style/DetailTable.Value"
                android:text="@string/sample_text"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:layout_column="1"
            style="@style/DetailTable.Title"
            android:text="@string/state_province"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="3"
            android:id="@+id/state"
            android:layout_column="2"
            style="@style/DetailTable.Value"
            android:text="@string/sample_text"/>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:layout_column="1"
                style="@style/DetailTable.Title"
                android:text="@string/postal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="start"
                android:id="@+id/postal"
                android:layout_column="2"
                style="@style/DetailTable.Value"
                android:text="@string/sample_text"/>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:layout_column="1"
                style="@style/DetailTable.Title"
                android:text="@string/street_address_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="3"
                android:id="@+id/street_adress"
                android:layout_column="2"
                style="@style/DetailTable.Value"
                android:text="@string/sample_text"/>

        </TableRow>

    </TableLayout>


    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>
